align menu underlines, fix remaining scalable units

--- a/css/main.css
+++ b/css/main.css
@@ -416,13 +416,13 @@ caption {
 a {
     position: relative;
     text-decoration: underline 1px;
-    text-underline-offset: 2px;
+    text-underline-offset: 0.15em;
 }
 
 a.highlight {
     transition: color 0.3s ease, background-color 0.3s ease;
     text-decoration: underline 1px;
-    text-underline-offset: 2px;
+    text-underline-offset: 0.15em;
     padding: 0 0.2em;
     margin: 0 -0.2em;
     border-radius: 0.2em;
@@ -452,7 +452,7 @@ a.highlight:hover i {
 .menu a.item::after {
     content: '';
     position: absolute;
-    bottom: 3.35px;
+    bottom: 0.25em;
     left: 0;
     width: 100%;
     height: 1px;
@@ -667,7 +667,7 @@ article.writing-post .code-block pre code {
     width: 100%;
     height: 0.2rem;
     background-color: var(--code-scrollbar);
-    border-radius: 999px;
+    border-radius: 999em;
     transition: background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
